Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39773

GL_COMPUTE_WORK_GROUP_SIZE missing in QtGui/qopenglext.h

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0
    • 5.3.0
    • GUI: OpenGL
    • None
    • Arch Linux 64bit, OpenGL 4.4, Qt 5.3.0
      (had the same problem on Windows but did not investigate there)

      The macro GL_COMPUTE_WORK_GROUP_SIZE is missing when using the QOpenGL components.

      It is defined in glext.h (GL_VERSION_4_3 section) but not in QtGui/qopenglext.h

      The symbol is used as parameter to glGetProgramiv so it should (at least) be defined when including the QOpenGLFunctions_4_3 or higher.

        For Gerrit Dashboard: QTBUG-39773
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            spynacker Martin Schulze
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes