Update qopenglext.h and qopengles2ext.h

The current one is from 2012 and is based on the obsolete spec files.
Replace it with the new one generated from the XML specs.

At the same time fix the callback function signature for QOpenGLDebugLogger
since it would not build otherwise. The user parameter is const GLvoid *
according to the specification.

Task-number: QTBUG-39773
Change-Id: If2153198373eeebc587c41b2dbf6bed5bcb26761
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>

cregit: d147535322ef79d819602f453eaf784c99f6e978 https://github.com/qt/qtbase/commit/d147535322ef79d819602f453eaf784c99f6e978